--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+		<title>github pages homepage</title>
+	</head>
+	<body>
+        <h1>Welcome to my WEBD1000 Repository.</h1>
+	</body>
+</html>
