--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Teag's Pages</h1>
             <nav>
                 <ul>
-                    <li><a href ="https://github.com/teagz17/WEBD1000">Github WEBD1000 Repository</a></li>
+                    <li><a href ="https://github.com/teagz17">Github Profile</a></li>
+                    <li><a href ="https://github.com/teagz17/WEBD1000">WEBD1000 Repository</a></li>
                 </ul>
             </nav>
         </header>
