--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<title>github pages homepage</title>
+	<title>teag's github pages homepage</title>
     <link href="index.css" rel="stylesheet" type="text/css">
     </head>
 	<body>
         <header>
-        <h1>Teag's Pages</h1>
+        <h1>Teag's Homepage</h1>
             <nav>
                 <ul>
                     <li><a href ="https://github.com/teagz17">Github Profile</a></li>
