--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
             </nav>
         </header>
         <main>
+            <h1>WEBD1000 Assignments</h1>
             <section>
                 <h1>Module 1</h1>
                 <a href ="https://teagz17.github.io/WEBD1000/Module_1/w0302952_WEBD1000_First_Web_Page.html">Basic Responsive Webpage</a>
+                <p>A simple responsive webpage showing a table with different network diagramming symbols.</p>
             </section>
             <section>
                 <h1>Module 2</h1>
                 <a href ="https://teagz17.github.io/WEBD1000/Module_2_CSS/Blackjack_CSS_exercise.html">CSS Exercise</a>
+                <p>The homepage for "Blackjack Tequila", a fake (for now) tequila company. Designed using CSS.</p>
+            </section>
+            <h1>Development/Design Exercises</h1>
+            <section>
+                <h1>First Webpage</h1>
+                <a href ="https://teagz17.github.io/WEBD1000/Practice/Route19_Cocktails">Route 19 Cocktail Recipes</a>
+                <p>My first webpage. A simple page with a few cocktail recipes from the bar I work at.</p>
             </section>
         </main>
     </body>
