--- a/index.html
+++ b/index.html
@@ -5,31 +5,47 @@
 	<meta charset="UTF-8">
 	<title>teag's github pages homepage</title>
     <link href="index.css" rel="stylesheet" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 	<body>
         <header>
         <h1>Teag's Homepage</h1>
-            <nav>
-                <ul>
-                    <li><a href ="https://github.com/teagz17">Github Profile</a></li>
-                    <li><a href ="https://github.com/teagz17/WEBD1000">WEBD1000 Repository</a></li>
-                </ul>
+            <nav class="navbar">
+                <div id="nav-container" class="container-fluid">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="navbar-brand nav-link" href ="https://github.com/teagz17">Github Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-brand nav-link" href ="https://github.com/teagz17/WEBD1000">WEBD1000 Repository</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-brand nav-link" href ="https://github.com/teagz17/PROG1700-Algorithms">PROG1700 Repository</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main>
-            <h1>WEBD1000 Assignments</h1>
-            <section>
-                <h1>Module 1</h1>
-                <a href ="https://teagz17.github.io/WEBD1000/Module_1/w0302952_WEBD1000_First_Web_Page.html">Basic Responsive Webpage</a>
-                <p>A simple responsive webpage showing a table with different network diagramming symbols.</p>
-            </section>
-            <section>
-                <h1>Module 2</h1>
-                <a href ="https://teagz17.github.io/WEBD1000/Module_2_CSS/Blackjack_CSS_exercise.html">CSS Exercise</a>
-                <p>The homepage for "Blackjack Tequila", a fake (for now) tequila company. Designed using CSS.</p>
-            </section>
-            <h1>Development/Design Exercises</h1>
-
+            <div id="main" class="container-fluid">
+                <h1>WEBD1000 Assignments</h1>
+                <section id="Module-1">
+                    <h1>Module 1</h1>
+                    <a class="main-link" href ="https://teagz17.github.io/WEBD1000/Module_1/w0302952_WEBD1000_First_Web_Page.html">Basic Responsive Webpage</a>
+                    <p>A simple responsive webpage showing a table with different network diagramming symbols.</p>
+                    </section>
+                <section id="Module-2">
+                    <h1>Module 2</h1>
+                    <a class="main-link" href ="https://teagz17.github.io/WEBD1000/Module_2_CSS/Blackjack_CSS_exercise.html">CSS Exercise</a>
+                    <p>The homepage for "Blackjack Tequila", a fake (for now) tequila company. Designed using CSS.</p>
+                </section>
+                <section id="RideShareSite">
+                    <h1>Ride Share Site</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD1000/RideSharingSite">Homepage</a>
+                    <p>The homepage for the Ride Share website we're working on.</p>
+                </section>
+                <h1>Development/Design Exercises</h1>
+            </div>
             </section>
         </main>
     </body>
