--- a/Module_3_Skill_Development/w0302952-WEBD1000-skills-development-exercise.html
+++ b/Module_3_Skill_Development/w0302952-WEBD1000-skills-development-exercise.html
@@ -22,21 +22,27 @@
 	</head>
 
     <body>
+        <!--exercise: inline styles-->
         <div style="color: #6161ff; font-size: 64px;">
             This is a div with inline styles.
         </div>
+        <!--exercise: external styles-->
         <div id="myDiv">
             This is a div with external css.
         </div>
+        <!--exercise: internal styles-->
         <div class="myDiv2">
             this is a div with internal css.
         </div>
+        <!--exercise: selectors and descendants-->
         <div id="myDiv3">
             this is a blue <span>div</span> with external style sheet.
         </div>
+        <!--exercise: box model-->
         <div class="myDiv4"> </div>
         <div id="myDiv5" class="flex-container">
-
+        <!--exercise: -->
+            
         </div>
 	</body>
 </html>
