--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                     <a class="main-link" href="https://teagz17.github.io/WEBD1000/RideSharingSite">Homepage</a>
                     <p>The homepage for the Ride Share website we're working on.</p>
                 </section>
+            </div>
+            <div id="main" class="container-fluid">
                 <h1>Development/Design Exercises</h1>
+                <section id="Module-3">
+                    <h1>Module 3</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD1000/Module_3_Skill_Development/">HTML and CSS Skills Development Exercise</a>
+                    <p>A webpage with different examples of using div containers, and some of the ways you can style them.</p>
+                </section>
             </div>
             </section>
         </main>
