added link to portfolio

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     <a class="main-link" href="https://teagz17.github.io/WEBD1000/RideSharingSite">Homepage</a>
                     <p>The homepage for the Ride Share website we're working on.</p>
                 </section>
+                <section id="Personal-Portfolio">
+                    <h1>Timed Final</h1>
+                    <a class="main-link" href="https://teagz17.github.io/WEBD1000/Personal_Portfolio/">Personal Portfolio Page</a>
+                    <p>A personal portfolio webpage, our final WEBD1000 assignment.</p>
+                </section>
             </div>
             <div id="main" class="container-fluid">
                 <h1>Development/Design Exercises</h1>
